# math-i-like

./: .gitignore
rdft/: .gitignore  PLAN.md  README.md  pyproject.toml
rdft/docs/: generating_functions_field_theory_AC_tutorial.tex
rdft/examples/: brw_complete.py  crn_survey.py
rdft/paper/: main.tex
rdft/paper/ac_ml/: main.tex
rdft/paper/two_loop_worked/: barw_even_2loop.md  main.tex
rdft/paper/wip/ac_beyond/: main.tex
rdft/paper/wip/cognitive/: main.tex
rdft/rdft/: __init__.py  cli.py  pipeline.py  simulate.py
rdft/rdft/ac/: algebraic.py  correspondence.py  dse.py  lagrange.py  network_percolation.py  transfer.py
rdft/rdft/core/: expansion.py  generators.py  reaction_network.py
rdft/rdft/graphs/: corolla.py  enumerate.py  incidence.py  render.py  spectral.py  tikz.py
rdft/rdft/integrals/: parametric.py  symanzik.py
rdft/rdft/rg/: algebraic_loop.py  bphz.py  rg_functions.py
rdft/results/: prion_1d.json  prion_1d_scan.json  prion_test.json
rdft/simulations/: Cargo.toml
rdft/simulations/python/: plot_brw.py  plot_prion.py  prion_sim.py
rdft/simulations/src/: crn.rs  engine.rs  graph.rs  lib.rs  main.rs
rdft/tests/validation/: test_ac_route.py  test_tier1.py
