[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rdft"
version = "0.1.0"
description = "Reaction-Diffusion Field Theory: from stoichiometry to critical exponents via analytic combinatorics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Saoirse Amarteifio"},
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.20",
    "scipy>=1.7",
    "networkx>=2.6",
    "matplotlib>=3.4",
    "typer>=0.9",
]

[project.scripts]
rdft = "rdft.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["rdft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
