[package]
name = "rdft-sim"
version = "0.1.0"
edition = "2021"
description = "Fast particle simulator for chemical reaction networks on lattices and graphs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# target-cpu = "native"  # set via RUSTFLAGS if desired
